# mcp_finviz

./: .gitignore  Dockerfile  README.md  claude_config.json.bkp  pyproject.toml
src/mcp_finviz/: __main__.py  server.py
